# lemon-mbl

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.assets/: info.txt
.github/workflows/: rust.yml
data/: config.yml  monsters.yml
data/schemas/: abilities.json  abilities.yml  actions.json  actions.yml  config.json  config.yml  damage_types.json  damage_types.yml  monsters.json  monsters.yml  translations.json  translations.yml
data/stats/: abilities.json  abilities.yml  actions.json  actions.yml  damage_types.json  damage_types.yml  monsters.json  monsters.yml
data/translations/: de.yml  en.yml
libraries/game_data/: Cargo.toml
libraries/utils/: Cargo.toml
schemas/: monsters.json  monsters.yml
src/: battle.rs  battle_logic.rs  calculations.rs  data_structures.rs  directories.rs  entities.rs  enums.rs  game_data.rs  lib.rs  serialization.rs  states.rs  tests.rs  traits.rs
src/battle/: battle_state.rs
src/battle_logic/: battle_error.rs  battle_event.rs  battle_event_cost.rs  battle_event_feedback.rs  battle_event_type.rs  battle_log.rs  battle_state.rs  events.rs
src/calculations/: battle.rs  int_bps.rs  stats.rs
src/data_structures/: config_data.rs  damage_type_library.rs  data_library.rs  entity_collection.rs  entity_library.rs  i18n.rs  monster_images.rs
src/entities/: ability_data.rs  action_data.rs  battle_monster.rs  damage_type_data.rs  monster.rs  monster_data.rs  monster_stats.rs  stored_action.rs  stored_monster.rs
src/enums/: ability_target.rs  ability_trigger_type.rs  action_target.rs  battle_event_feedback_source_type.rs  (+14 more)
(+51 files in other folders)
