[package]
name = "lemon-mbl"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
lemon-mbl-game-data = { path = "libraries/game_data" }
lemon-mbl-utils = { path = "libraries/utils" }
once_cell = "1.20.2"

[build-dependencies]
bincode = "1.3.3"
lemon-mbl-build = { path = "libraries/build" }
